# discord_py_bot

./: README.md  bot.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
cogs/: cog_1.py
tests/: test_cog_1.py
